--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ AddDefaultCharset utf-8
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ htdocs/index.php
+RewriteRule ^(.*)$ index.php
